# airbyte-connector

./: .gitignore  CONNECTOR_CONFIGURATION.md  DOCUMENTATION_INDEX.md  Dockerfile.destination  Dockerfile.source  QUICK_REFERENCE.md  README.md  RECONFIGURATION_SUMMARY.md  TABLE_MATCH_INSERT_GUIDE.md  USAGE_GUIDE.md  YUESHU_SCHEMA_READING.md  YUESHU_TABLE_INSERT_SYNTAX.md  pyproject.toml  test_batch_insert.py  test_check.py  test_config_schema.json  test_describe_vertex_edge.py  test_discover.sh  test_infer_types.py  test_nebula_direct.py  test_real_connection.py  test_schema_reader.py  test_stream_structure.py  test_write_mode_mapping.py  test_yueshu_schema_commands.py  verify_all.py  verify_discover.py  yueshu.yaml
.github/workflows/: ci-docker.yml
configs/: README.md  destination.catalog.sample.json  destination.sample.json  source.catalog.sample.json  source.sample.json
docs/: AIRBYTE_UI_INTEGRATION.md  OPTIMIZED_CONFIG.md  UI_CONFIGURATION_GUIDE.md  UI_IMPLEMENTATION_GUIDE.md
examples/: configuration_examples.py  movie_catalog.json
scripts/: validate_connection.py
specs/: destination_spec.json  stream_config_ui_spec.json
src/airbyte_connector_yueshu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/yueshu_airbyte_connector/: cli.py  common.py  destination.py  gql_generator.py  nebula_client.py  schema_reader.py  source.py
tests/: test_connection.py  test_gql_generator.py  test_schema_reader.py
yueshu-graph-5.2.0/: gql-vs-cypher-prompts.md  index.html
yueshu-graph-5.2.0/127.0.0.1_8000/: index.html
(+410 files in other folders)
