[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbyte-connector-yueshu"
version = "0.1.0"
description = "Airbyte source and destination connector for Yueshu Graph 5.2 using nebula5-python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Vesoft" }]
dependencies = [
  "nebula5-python>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
yueshu-airbyte = "yueshu_airbyte_connector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
